# planck-emulator

./: Cargo.toml  README.md
src/: app.rs  button.rs  computer.rs  handler.rs  lib.rs  main.rs  ui.rs
src/computer/: card.rs  cf.rs  cia.rs  decode.rs  empty.rs  via.rs
src/ui/: header.rs  main.rs  memory.rs  stateful_list.rs
