[package]
name = "plu"
version = "0.0.1"
authors = ["Jonathan Foucher <jfoucher@gmail.com>"]
description = "Planck 6502 computer emulator"
license = "MIT"
edition = "2021"
repository = "https://github.com/jfoucher/planck-emulator"
keywords = []
categories = ["command-line-utilities"]
exclude = [
    "img/*",
]

[dependencies]
crossterm = "0.27.0"
ratatui = { version = "0.25.0", features = ["all-widgets"]}
rand = "0.8.5"
itertools = "0.12"
chrono = "0.4"
